syntax = "proto3";

package ethereum;

option go_package = "./pb";

import "ethereum.proto";

message Message {
  // List of old blocks that are re-org.
  repeated ethereum.Block reverted_blocks = 1;
  // List of new blocks. Normally have size 1 if no re-org happened.
  repeated ethereum.Block new_blocks = 2;
}
